# tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: main.c  tetris.h
src/: lib.c  main.c  tetris.c  tetris.h
test/: CMakeLists.txt
test/source/: tetris_test.c
